Icons; Pdf with unit filter; Unit filter defaults to user's one; Block inventory unit change for moderators;
